--- a/root/_posts/2022-07-21-spock.md
+++ b/root/_posts/2022-07-21-spock.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-cover: 'assets/images/cover4.jpg'
+cover: 'assets/images/cover-flashing-screen.webp'
 navigation: True
 title: I Have a Dream
 date: 2022-07-21 16:00:00
