--- a/root/_posts/2022-07-21-spock.md
+++ b/root/_posts/2022-07-21-spock.md
@@ -8,6 +8,7 @@ tags: [Tips and tricks, Groovy, Spock, Testing]
 subclass: 'post'
 author: dominik
 categories: dominik
+description: '' #todo
 ---
 
 tak
